// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SVGIcon /> CustomColor story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="#928CFF"
  role="presentation"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`<SVGIcon /> CustomViewBox story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  role="presentation"
  viewBox="4 4 16 16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`<SVGIcon /> FullScreen story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="min(100%, 100vh)"
  role="presentation"
  viewBox="0 0 24 24"
  width="min(100%, 100vh)"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`<SVGIcon /> InText story renders snapshot 1`] = `
<p
  class="typography sizeH1 colorBase"
>
  The svg icon defaults to the surrounding text size (
  <svg
    class="svgIcon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      icon with 1em line height
    </title>
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
  , 1em), but often looks better with the line height (
  <svg
    class="svgIcon"
    fill="currentColor"
    height="2rem"
    role="img"
    viewBox="0 0 24 24"
    width="2rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      icon with 2em line height
    </title>
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
  , 2rem) which is harder to determine. Take a look at the icons available in
   
  <a
    href="https://material-ui.com/components/material-icons/"
    rel="noreferrer"
    target="_blank"
  >
    https://material-ui.com/components/material-icons/
  </a>
  , currently we only support the filled icons.
</p>
`;

exports[`<SVGIcon /> Large story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="4em"
  role="presentation"
  viewBox="0 0 24 24"
  width="4em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`<SVGIcon /> Medium story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="2em"
  role="presentation"
  viewBox="0 0 24 24"
  width="2em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`<SVGIcon /> Small story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="1em"
  role="presentation"
  viewBox="0 0 24 24"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`<SVGIcon /> icon1 story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  role="presentation"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
  />
</svg>
`;

exports[`<SVGIcon /> icon2 story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  role="presentation"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 6h-2v9H6v2c0 .55.45 1 1 1h11l4 4V7c0-.55-.45-1-1-1zm-4 6V3c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v14l4-4h10c.55 0 1-.45 1-1z"
  />
</svg>
`;

exports[`<SVGIcon /> icon3 story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  role="presentation"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
  />
</svg>
`;

exports[`<SVGIcon /> icon4 story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  role="presentation"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="15.5"
    cy="9.5"
    r="1.5"
  />
  <circle
    cx="8.5"
    cy="9.5"
    r="1.5"
  />
  <path
    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-6c-2.33 0-4.32 1.45-5.12 3.5h1.67c.69-1.19 1.97-2 3.45-2s2.75.81 3.45 2h1.67c-.8-2.05-2.79-3.5-5.12-3.5z"
  />
</svg>
`;

exports[`<SVGIcon /> icon5 story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  role="presentation"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
  />
</svg>
`;
